--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -11,6 +11,8 @@ The `sonatyperepo` provider is used to interact with resources supported by [Son
 
 The provider needs to be configured with the proper credentials before it can be used.
 
+{{ .Description | trimspace }}
+
 ## Example Usage
 
 {{ tffile "examples/provider/provider.tf" }}
