doc: call out known compatability
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/templates/index.md.tmpl
+++ b/templates/index.md.tmpl
@@ -11,6 +11,10 @@ The `sonatyperepo` provider is used to interact with resources supported by [Son
 
 The provider needs to be configured with the proper credentials before it can be used.
 
+## Compatability
+
+This Provider is tested on Sonatype Nexus Repository Manager versions `3.79.0` through `3.81.1` currently.
+
 {{ .Description | trimspace }}
 
 ## Example Usage
